Fix unexpected erasing textQuad

LayoutText::absoluteQuadsForRange erases quads which given by the
argument. This is unexpected behavior. To fix this issue when given
quads is not empty, just skip adding bounds of box which is not in
range offset without clearing previous quads.

BUG=707627

Review-Url: https://codereview.chromium.org/2792953002
Cr-Commit-Position: refs/heads/master@{#461681}

Former-commit-id: 7aab680a20f88c816877a06dcfee33eadb732e1c